Update configuration and code files: changed server_name in nginx config, fixed typo in app.js, added new lines in .env, and corrected comment in vite.config.js.

--- a/.github/nginx-reference.conf
+++ b/.github/nginx-reference.conf
@@ -4,7 +4,7 @@
 
 server {
     listen 80;
-    server_name your-domain.com www.your-domain.com;  # Replace with your domain or IP
+    server_name ip;  # Replace with your domain or IP
     
     # Frontend static files
     root /var/www/html;
