--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -52,7 +52,12 @@ jobs:
 
       - name: Add Lightsail host to known hosts
         run: |
-          ssh-keyscan -H ${{ secrets.LIGHTSAIL_HOST }} >> ~/.ssh/known_hosts
+          LIGHTSAIL_HOST_ONLY=$(echo ${{ secrets.LIGHTSAIL_HOST }} | sed 's/.*@//')
+          ssh-keyscan -H ${LIGHTSAIL_HOST_ONLY} >> ~/.ssh/known_hosts
+
+      - name: Test SSH Connection
+        run: |
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 ${{ secrets.LIGHTSAIL_HOST }} "echo 'SSH connection successful'"
 
       - name: Deploy to Lightsail Instance
         env:
@@ -132,8 +137,8 @@ jobs:
           
           # Upload and execute script on Lightsail instance
           chmod +x deploy-backend.sh
-          scp deploy-backend.sh ${{ secrets.LIGHTSAIL_HOST }}:/tmp/deploy-backend.sh
-          ssh ${{ secrets.LIGHTSAIL_HOST }} "bash /tmp/deploy-backend.sh \
+          scp -o StrictHostKeyChecking=no deploy-backend.sh ${{ secrets.LIGHTSAIL_HOST }}:/tmp/deploy-backend.sh
+          ssh -o StrictHostKeyChecking=no ${{ secrets.LIGHTSAIL_HOST }} "bash /tmp/deploy-backend.sh \
             '${{ steps.login-ecr.outputs.registry }}' \
             '${{ env.ECR_REPOSITORY }}' \
             '${{ secrets.AWS_REGION }}' \
@@ -149,5 +154,6 @@ jobs:
       - name: Verify Deployment
         run: |
           sleep 5
-          curl -f http://${{ secrets.LIGHTSAIL_HOST }}:5000/health || exit 1
+          LIGHTSAIL_HOST_ONLY=$(echo ${{ secrets.LIGHTSAIL_HOST }} | sed 's/.*@//')
+          curl -f http://${LIGHTSAIL_HOST_ONLY}:5001/health || exit 1
 
