--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -70,16 +70,86 @@ jobs:
           # Copy built files
           cp -r frontend/dist/* deploy-frontend/
           
-          # Ensure target directory exists on server and upload files
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 ${{ secrets.LIGHTSAIL_HOST }} 'sudo mkdir -p /var/www/html && sudo chown -R $USER:$USER /var/www/html'
-          scp -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 -r deploy-frontend/* ${{ secrets.LIGHTSAIL_HOST }}:/var/www/html/
+          # Retry function for SSH operations
+          retry_ssh() {
+            local max_attempts=3
+            local attempt=1
+            local command="$1"
+            
+            while [ $attempt -le $max_attempts ]; do
+              echo "SSH attempt $attempt of $max_attempts..."
+              if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 ${{ secrets.LIGHTSAIL_HOST }} "$command"; then
+                return 0
+              fi
+              attempt=$((attempt + 1))
+              if [ $attempt -le $max_attempts ]; then
+                echo "SSH failed, waiting 5 seconds before retry..."
+                sleep 5
+              fi
+            done
+            echo "SSH operation failed after $max_attempts attempts"
+            return 1
+          }
+          
+          # Retry function for SCP operations
+          retry_scp() {
+            local max_attempts=3
+            local attempt=1
+            local source="$1"
+            local dest="$2"
+            
+            while [ $attempt -le $max_attempts ]; do
+              echo "SCP attempt $attempt of $max_attempts..."
+              if scp -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 -r "$source" "$dest"; then
+                return 0
+              fi
+              attempt=$((attempt + 1))
+              if [ $attempt -le $max_attempts ]; then
+                echo "SCP failed, waiting 5 seconds before retry..."
+                sleep 5
+              fi
+            done
+            echo "SCP operation failed after $max_attempts attempts"
+            return 1
+          }
+          
+          # Ensure target directory exists on server
+          echo "Creating directory on server..."
+          retry_ssh 'sudo mkdir -p /var/www/html && sudo chown -R $USER:$USER /var/www/html' || {
+            echo "ERROR: Cannot connect to Lightsail instance via SSH."
+            echo "Please check:"
+            echo "1. Lightsail instance is running"
+            echo "2. Port 22 (SSH) is open in Lightsail firewall"
+            echo "3. LIGHTSAIL_HOST secret is correct: ${{ secrets.LIGHTSAIL_HOST }}"
+            exit 1
+          }
+          
+          # Upload files
+          echo "Uploading files to server..."
+          retry_scp deploy-frontend/* ${{ secrets.LIGHTSAIL_HOST }}:/var/www/html/ || {
+            echo "ERROR: Failed to upload files to server."
+            exit 1
+          }
           
           # Clean up local deployment directory
           rm -rf deploy-frontend
+          echo "Deployment completed successfully!"
 
       - name: Restart Nginx
         run: |
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 ${{ secrets.LIGHTSAIL_HOST }} 'sudo systemctl reload nginx || sudo systemctl restart nginx'
+          # Retry SSH command for nginx restart
+          for i in {1..3}; do
+            echo "Nginx restart attempt $i of 3..."
+            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 ${{ secrets.LIGHTSAIL_HOST }} 'sudo systemctl reload nginx || sudo systemctl restart nginx'; then
+              echo "Nginx restarted successfully"
+              exit 0
+            fi
+            if [ $i -lt 3 ]; then
+              echo "Nginx restart failed, waiting 5 seconds before retry..."
+              sleep 5
+            fi
+          done
+          echo "Warning: Nginx restart failed after 3 attempts, but deployment may still be successful"
 
       - name: Verify Deployment
         run: |
