--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend-deploy.yml'
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -14,9 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1️⃣ Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -24,136 +27,78 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
-
-      - name: Build frontend
+      # 3️⃣ Install dependencies & build
+      - name: Install Dependencies and Build
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
         run: |
           cd frontend
+          npm ci
           npm run build
 
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.9.0
+      # 4️⃣ Extract username and host from LIGHTSAIL_HOST
+      - name: Extract SSH credentials
+        id: ssh-creds
+        run: |
+          LIGHTSAIL_HOST="${{ secrets.LIGHTSAIL_HOST }}"
+          if [[ "$LIGHTSAIL_HOST" == *"@"* ]]; then
+            SSH_USERNAME=$(echo "$LIGHTSAIL_HOST" | cut -d'@' -f1)
+            SSH_HOST=$(echo "$LIGHTSAIL_HOST" | cut -d'@' -f2)
+          else
+            SSH_USERNAME="ubuntu"
+            SSH_HOST="$LIGHTSAIL_HOST"
+          fi
+          echo "username=$SSH_USERNAME" >> $GITHUB_OUTPUT
+          echo "host=$SSH_HOST" >> $GITHUB_OUTPUT
+          echo "Extracted username: $SSH_USERNAME"
+          echo "Extracted host: $SSH_HOST"
+
+      # 5️⃣ Prepare temp directory on Lightsail
+      - name: Prepare Lightsail temp directory
+        uses: appleboy/ssh-action@master
         with:
-          ssh-private-key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+          host: ${{ steps.ssh-creds.outputs.host }}
+          username: ${{ steps.ssh-creds.outputs.username }}
+          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+          script: |
+            rm -rf ~/deploy-temp
+            mkdir -p ~/deploy-temp
+            chmod 775 ~/deploy-temp
 
-      - name: Add Lightsail host to known hosts
-        run: |
-          # Extract hostname for ssh-keyscan (it needs just the host, not user@host)
-          LIGHTSAIL_HOST_ONLY=$(echo ${{ secrets.LIGHTSAIL_HOST }} | sed 's/.*@//')
-          if [ -z "${LIGHTSAIL_HOST_ONLY}" ]; then
-            # Fallback: use the full value if extraction fails
-            LIGHTSAIL_HOST_ONLY="${{ secrets.LIGHTSAIL_HOST }}"
-          fi
-          ssh-keyscan -H ${LIGHTSAIL_HOST_ONLY} >> ~/.ssh/known_hosts 2>&1 || echo "Warning: ssh-keyscan failed, but continuing..."
+      # 6️⃣ Upload build using rsync
+      - name: Upload build to Lightsail
+        uses: burnett01/rsync-deployments@5.2.1
+        with:
+          switches: -avzr --delete
+          path: frontend/dist/
+          remote_path: ~/deploy-temp/
+          remote_host: ${{ steps.ssh-creds.outputs.host }}
+          remote_user: ${{ steps.ssh-creds.outputs.username }}
+          remote_key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
 
-      - name: Test SSH Connection
-        continue-on-error: true
-        run: |
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 ${{ secrets.LIGHTSAIL_HOST }} "echo 'SSH connection successful'" || echo "SSH test failed, but continuing with deployment..."
+      # 7️⃣ Deploy to Nginx web root
+      - name: Deploy to Nginx
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ steps.ssh-creds.outputs.host }}
+          username: ${{ steps.ssh-creds.outputs.username }}
+          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+          script: |
+            sudo rm -rf /var/www/html/*
+            sudo mkdir -p /var/www/html
+            sudo cp -R ~/deploy-temp/* /var/www/html/
+            sudo chown -R www-data:www-data /var/www/html
+            sudo chmod -R 755 /var/www/html
+            rm -rf ~/deploy-temp
 
-      - name: Deploy to Lightsail Instance
-        run: |
-          # Verify dist directory exists
-          if [ ! -d "frontend/dist" ]; then
-            echo "Error: frontend/dist directory not found. Build may have failed."
-            exit 1
-          fi
-          
-          # Create deployment directory
-          mkdir -p deploy-frontend
-          
-          # Copy built files
-          cp -r frontend/dist/* deploy-frontend/
-          
-          # Retry function for SSH operations
-          retry_ssh() {
-            local max_attempts=3
-            local attempt=1
-            local command="$1"
-            
-            while [ $attempt -le $max_attempts ]; do
-              echo "SSH attempt $attempt of $max_attempts..."
-              if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 ${{ secrets.LIGHTSAIL_HOST }} "$command"; then
-                return 0
-              fi
-              attempt=$((attempt + 1))
-              if [ $attempt -le $max_attempts ]; then
-                echo "SSH failed, waiting 5 seconds before retry..."
-                sleep 5
-              fi
-            done
-            echo "SSH operation failed after $max_attempts attempts"
-            return 1
-          }
-          
-          # Retry function for SCP operations
-          retry_scp() {
-            local max_attempts=3
-            local attempt=1
-            local source="$1"
-            local dest="$2"
-            
-            while [ $attempt -le $max_attempts ]; do
-              echo "SCP attempt $attempt of $max_attempts..."
-              if scp -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 -r "$source" "$dest"; then
-                return 0
-              fi
-              attempt=$((attempt + 1))
-              if [ $attempt -le $max_attempts ]; then
-                echo "SCP failed, waiting 5 seconds before retry..."
-                sleep 5
-              fi
-            done
-            echo "SCP operation failed after $max_attempts attempts"
-            return 1
-          }
-          
-          # Ensure target directory exists on server
-          echo "Creating directory on server..."
-          retry_ssh 'sudo mkdir -p /var/www/html && sudo chown -R $USER:$USER /var/www/html' || {
-            echo "ERROR: Cannot connect to Lightsail instance via SSH."
-            echo "Please check:"
-            echo "1. Lightsail instance is running"
-            echo "2. Port 22 (SSH) is open in Lightsail firewall"
-            echo "3. LIGHTSAIL_HOST secret is correct: ${{ secrets.LIGHTSAIL_HOST }}"
-            exit 1
-          }
-          
-          # Upload files
-          echo "Uploading files to server..."
-          retry_scp deploy-frontend/* ${{ secrets.LIGHTSAIL_HOST }}:/var/www/html/ || {
-            echo "ERROR: Failed to upload files to server."
-            exit 1
-          }
-          
-          # Clean up local deployment directory
-          rm -rf deploy-frontend
-          echo "Deployment completed successfully!"
+            sudo rm -rf /var/cache/nginx/*
+            sudo systemctl restart nginx
 
-      - name: Restart Nginx
-        run: |
-          # Retry SSH command for nginx restart
-          for i in {1..3}; do
-            echo "Nginx restart attempt $i of 3..."
-            if ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 ${{ secrets.LIGHTSAIL_HOST }} 'sudo systemctl reload nginx || sudo systemctl restart nginx'; then
-              echo "Nginx restarted successfully"
-              exit 0
-            fi
-            if [ $i -lt 3 ]; then
-              echo "Nginx restart failed, waiting 5 seconds before retry..."
-              sleep 5
-            fi
-          done
-          echo "Warning: Nginx restart failed after 3 attempts, but deployment may still be successful"
+            echo "✅ Frontend deployment completed!"
 
+      # 8️⃣ Verify Deployment
       - name: Verify Deployment
         run: |
           sleep 3
-          LIGHTSAIL_HOST_ONLY=$(echo ${{ secrets.LIGHTSAIL_HOST }} | sed 's/.*@//')
-          curl -f --max-time 10 http://${LIGHTSAIL_HOST_ONLY} || echo "Frontend deployment completed. Verify manually if needed."
-
+          SSH_HOST="${{ steps.ssh-creds.outputs.host }}"
+          curl -f --max-time 10 http://${SSH_HOST} || echo "Frontend deployment completed. Verify manually if needed."
