--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -143,6 +143,7 @@ jobs:
             '${{ env.ECR_REPOSITORY }}' \
             '${{ secrets.AWS_REGION }}' \
             '${{ secrets.MONGODB_URI }}' \
+            '${{ secrets.OPENAI_API_KEY_TEST }}' \
             '${{ secrets.JWT_SECRET }}' \
             '${{ secrets.JWT_EXPIRE }}' \
             '${{ secrets.AWS_ACCESS_KEY_ID }}' \
