--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
+    "openai": "^4.28.0",
+    "pdf-parse": "^1.1.1",
     "uuid": "^13.0.0",
     "winston": "^3.11.0"
   },
