--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/client-s3": "^3.958.0",
     "@aws-sdk/s3-request-presigner": "^3.958.0",
     "bcryptjs": "^2.4.3",
+    "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,9 +25,11 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "openai": "^4.28.0",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.4.449",
     "uuid": "^13.0.0",
     "winston": "^3.11.0"
   },
