--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,11 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -27,10 +32,10 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
     "react": "^19.2.0",
-    "react-big-calendar": "^1.19.4",
     "react-day-picker": "^9.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.26.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^2.5.2",
     "zustand": "^5.0.1"
   },
