--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -35,6 +36,7 @@
     "react-day-picker": "^9.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.26.0",
+    "react-spinners": "^0.17.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^2.5.2",
     "zustand": "^5.0.1"
