--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
@@ -41,7 +41,7 @@ jobs:
         id: ssh-creds
         run: |
           # LIGHTSAIL_HOST_F contains only the IP address
-          SSH_HOST="${{ secrets.LIGHTSAIL_HOST }}"
+          SSH_HOST="${{ secrets.LIGHTSAIL_HOST_F }}"
           SSH_USERNAME="ubuntu"
           echo "username=$SSH_USERNAME" >> $GITHUB_OUTPUT
           echo "host=$SSH_HOST" >> $GITHUB_OUTPUT
