--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
-      # 3️⃣ Install dependencies & build
+      # 3️⃣ Install dependencies & builds
       - name: Install Dependencies and Build
         env:
           VITE_API_URL: ${{ secrets.VITE_API_URL }}
